DATAMONGO-1444 - Refactor IndexOperationsProvider.