@@ -29,13 +29,17 @@ import org.springframework.core.convert.converter.Converter;
 import org.springframework.data.mongodb.core.index.IndexDefinition;
 import org.springframework.data.mongodb.core.index.IndexField;
 import org.springframework.data.mongodb.core.index.IndexInfo;
+import org.springframework.util.ObjectUtils;
 
 import com.mongodb.client.model.IndexOptions;
 
 /**
+ * {@link Converter Converters} for index-related MongoDB documents/types.
+ * 
  * @author Mark Paluch
+ * @since 2.0
  */
-class MyConverters {
+abstract class IndexConverters {
 
 	public final static Converter<IndexDefinition, IndexOptions> DEFINITION_TO_MONGO_INDEX_OPTIONS;
 	public final static Converter<Document, IndexInfo> DOCUMENT_INDEX_INFO;
@@ -50,20 +54,23 @@ class MyConverters {
 		DOCUMENT_INDEX_INFO = getDocumentIndexInfoConverter();
 	}
 
+	private IndexConverters() {
+
+	}
+
 	private static Converter<IndexDefinition, IndexOptions> getIndexDefinitionIndexOptionsConverter() {
+
 		return indexDefinition -> {
 
 			Document indexOptions = indexDefinition.getIndexOptions();
 			IndexOptions ops = new IndexOptions();
+
 			if (indexOptions.containsKey("name")) {
 				ops = ops.name(indexOptions.get("name").toString());
 			}
 			if (indexOptions.containsKey("unique")) {
 				ops = ops.unique((Boolean) indexOptions.get("unique"));
 			}
-			// if(indexOptions.containsField("dropDuplicates")) {
-			// ops = ops.((boolean)indexOptions.get("dropDuplicates"));
-			// }
 			if (indexOptions.containsKey("sparse")) {
 				ops = ops.sparse((Boolean) indexOptions.get("sparse"));
 			}
@@ -92,7 +99,13 @@ class MyConverters {
 				ops = ops.languageOverride(indexOptions.get("language_override").toString());
 			}
 			if (indexOptions.containsKey("weights")) {
-				ops = ops.weights((Document) indexOptions.get("weights"));
+				ops = ops.weights((org.bson.Document) indexOptions.get("weights"));
+			}
+
+			for (String key : indexOptions.keySet()) {
+				if (ObjectUtils.nullSafeEquals("2dsphere", indexOptions.get(key))) {
+					ops = ops.sphereVersion(2);
+				}
 			}
 
 			return ops;
@@ -100,44 +113,46 @@ class MyConverters {
 	}
 
 	private static Converter<Document, IndexInfo> getDocumentIndexInfoConverter() {
+
 		return ix -> {
 			Document keyDbObject = (Document) ix.get("key");
-					int numberOfElements = keyDbObject.keySet().size();
+			int numberOfElements = keyDbObject.keySet().size();
 
-					List<IndexField> indexFields = new ArrayList<IndexField>(numberOfElements);
+			List<IndexField> indexFields = new ArrayList<IndexField>(numberOfElements);
 
-					for (String key : keyDbObject.keySet()) {
+			for (String key : keyDbObject.keySet()) {
 
-						Object value = keyDbObject.get(key);
+				Object value = keyDbObject.get(key);
 
-						if (TWO_D_IDENTIFIERS.contains(value)) {
-							indexFields.add(IndexField.geo(key));
-						} else if ("text".equals(value)) {
+				if (TWO_D_IDENTIFIERS.contains(value)) {
+					indexFields.add(IndexField.geo(key));
+				} else if ("text".equals(value)) {
 
-							Document weights = (Document) ix.get("weights");
-							for (String fieldName : weights.keySet()) {
-								indexFields.add(IndexField.text(fieldName, Float.valueOf(weights.get(fieldName).toString())));
-							}
-
-						} else {
-
-							Double keyValue = new Double(value.toString());
-
-							if (ONE.equals(keyValue)) {
-								indexFields.add(IndexField.create(key, ASC));
-							} else if (MINUS_ONE.equals(keyValue)) {
-								indexFields.add(IndexField.create(key, DESC));
-							}
-						}
+					Document weights = (Document) ix.get("weights");
+					for (String fieldName : weights.keySet()) {
+						indexFields.add(IndexField.text(fieldName, Float.valueOf(weights.get(fieldName).toString())));
 					}
 
-					String name = ix.get("name").toString();
+				} else {
 
-					boolean unique = ix.containsKey("unique") ? (Boolean) ix.get("unique") : false;
-					boolean dropDuplicates = ix.containsKey("dropDups") ? (Boolean) ix.get("dropDups") : false;
-					boolean sparse = ix.containsKey("sparse") ? (Boolean) ix.get("sparse") : false;
-					String language = ix.containsKey("default_language") ? (String) ix.get("default_language") : "";
-					return new IndexInfo(indexFields, name, unique, dropDuplicates, sparse, language);
+					Double keyValue = new Double(value.toString());
+
+					if (ONE.equals(keyValue)) {
+						indexFields.add(IndexField.create(key, ASC));
+					} else if (MINUS_ONE.equals(keyValue)) {
+						indexFields.add(IndexField.create(key, DESC));
+					}
+				}
+			}
+
+			String name = ix.get("name").toString();
+
+			boolean unique = ix.containsKey("unique") ? (Boolean) ix.get("unique") : false;
+			boolean dropDuplicates = ix.containsKey("dropDups") ? (Boolean) ix.get("dropDups") : false;
+			boolean sparse = ix.containsKey("sparse") ? (Boolean) ix.get("sparse") : false;
+
+			String language = ix.containsKey("default_language") ? (String) ix.get("default_language") : "";
+			return new IndexInfo(indexFields, name, unique, dropDuplicates, sparse, language);
 		};
 	}
 }
